fix: add text-align right rule to left lightsaber container

--- a/css/style.css
+++ b/css/style.css
@@ -360,6 +360,7 @@ hr {
 }
 
 .left-lightsaber-container {
+  text-align: right;
   padding: 0;
 }
 
